--- a/view/frontend/web/template/payment/buckaroo_magento2_capayablein3.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_capayablein3.html
@@ -66,13 +66,13 @@
                         <label class="label" for="buckaroo_magento2_capayablein3_Telephone"> <span data-bind="i18n: 'Telephone:'"> </span> </label>
                         <div class="control">
                             <input id="buckaroo_magento2_capayablein3_Telephone"
-                                   type="text"
                                    class="input-text field"
+                                   type="text"
+                                   name="payment[buckaroo_magento2_capayablein3][customer_telephone]"
                                    data-bind="
-                                   attr: { 'data-validate': JSON.stringify({ 'phoneValidation': true, 'required': true }) },
                                    valueUpdate: 'blur',
                                    value: phone"
-                                   name="payment[buckaroo_magento2_capayablein3][customer_telephone]">
+                                   data-validate="{required:true, 'phoneValidation': true}"/>
                         </div>
                     </div>
                     <!-- /ko -->
@@ -84,20 +84,20 @@
                             <input id="buckaroo_magento2_capayablein3_DoB"
                                    class="field"
                                    type="text"
+                                   name="payment[buckaroo_magento2_capayablein3][customer_DoB]"
                                    data-bind="
-                                           datepicker: {
-                                                storage: dateValidate,
-                                                options: {
-                                                    changeMonth: true,
-                                                    changeYear: true,
-                                                    yearRange: ((new Date()).getFullYear()-120) + ':' + (new Date()).getFullYear(),
-                                                    dateFormat: 'dd/MM/yy'
-                                                }
-                                           },
-                                           valueUpdate: 'blur',
-                                           value: dateValidate,
-                                           attr: { 'data-validate': JSON.stringify({ 'required': true })}"
-                                   name="payment[buckaroo_magento2_capayablein3][customer_DoB]">
+                                   datepicker: {
+                                        storage: dateValidate,
+                                        options: {
+                                            changeMonth: true,
+                                            changeYear: true,
+                                            yearRange: ((new Date()).getFullYear()-120) + ':' + (new Date()).getFullYear(),
+                                            dateFormat: 'dd/MM/yy'
+                                        }
+                                   },
+                                   valueUpdate: 'blur',
+                                   value: dateValidate"
+                                   data-validate="{required:true}"/>
                         </div>
                         <div for="buckaroo_magento2_capayablein3_DoB" generated="true" class="mage-error" id="dob-error" style="display: none;"><span data-bind="i18n: 'This is a required field.'"></span> </div>
                     </div>
