--- a/view/frontend/web/template/payment/buckaroo_magento2_klarnain.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_klarnain.html
@@ -22,14 +22,18 @@
                 <label class="label" for="buckaroo_magento2_klarnain_genderSelect"> <span data-bind="i18n: 'Salutation:'"> </span> </label>
                 <div class="control">
                     <ul id="Saluation">
-                        <li>            
-                            <select id="buckaroo_magento2_klarnain_genderSelect" name="payment[buckaroo_magento2_klarnain][customer_gender]" class="select"
-                            data-bind="options: gendersList(),
-                             optionsText: $t('genderTitle'),
-                             optionsValue: 'genderType',
-                             optionsCaption: $t('-- Please Select Your Gender--'),
-                             value: getSelectedGender,
-                             event: { change: setSelectedGender }, attr: { 'data-validate': JSON.stringify({ 'required': true })}">
+                        <li>
+                            <select id="buckaroo_magento2_klarnain_genderSelect"
+                                    class="select"
+                                    name="payment[buckaroo_magento2_klarnain][customer_gender]"
+                                    data-bind="
+                                    options: gendersList(),
+                                    optionsText: $t('genderTitle'),
+                                    optionsValue: 'genderType',
+                                    optionsCaption: $t('-- Please Select Your Gender--'),
+                                    value: getSelectedGender,
+                                    event: { change: setSelectedGender }"
+                                    data-validate="{required:true}">
                              </select>
                         </li>
                     </ul>
